--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,23 +1,48 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Node
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+
+# Logs & PIDs
+logs/
+*.log
+*.pid
+*.pid.lock
+
+# Build & Coverage
+dist/
+build/
+coverage/
+.nyc_output/
+
+# Caches
+.cache/
+.tmp/
+tmp/
+temp/
+
+# Env (نمونه را نگه دار)
+.env
+.env.*
+!.env.example
+
+# Uploads (فایل‌های آپلود شده روی سرور)
+uploads/**
+!uploads/.gitkeep
+
+# OS junk
+.DS_Store
+Thumbs.db
+Icon?
+
+# IDE
+.idea/
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+
+# Misc
+*.swp
+*.swo
