--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,14 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.23",
     "mongoose": "^8.7.3",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.7",
     "stripe": "^17.6.0"
   }
