--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,11 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.1",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.23",
@@ -23,6 +24,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.7",
+    "streamifier": "^0.1.1",
     "stripe": "^17.6.0"
   }
 }
