--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
+    "swiper": "^10.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
